--- a/app/assets/scss/_typography.scss
+++ b/app/assets/scss/_typography.scss
@@ -273,3 +273,7 @@ span {
     }
   }
 }
+
+.freetext {
+  white-space: pre-wrap;
+}
